# atom-oss-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PLATFORM_API_UI.md  README.md  SECURITY.md  atom_experiment_runner.py  atom_lbm2d.py  pyproject.toml  setup_venv.sh
docs/: PLATFORM_API_UI.md  RELEASE_RUNBOOK.md  SUPPORT_MATRIX.md  openapi.json
scripts/: bootstrap_and_smoke.sh  build_release_packet.py  check_docs_gate.py  export_openapi.py  generate_release_evidence.py  generate_wing.py  plot_platform_ablations.py  probe_latent_interpretability.py  reliability_kernel_smoke.py  run_phase0_gate.sh  run_platform_ablations.py  run_scientific_evidence_gate.sh  run_scientific_integrity_bench.py  setup_venv.sh  supersonic_validation_pack.py
src/atom/: __init__.py  checkpoint.py  cli.py  config.py  exceptions.py  logging.py  monitoring.py  resources.py  visualization.py
src/atom/challenges/: custom.py  cylinder.py  supersonic_wedge_challenge.py
src/atom/core/: brain.py  distributions.py  eyes2.py  symplectic.py  world.py
src/atom/mind/: conformal.py  governance.py  memory.py  scientist.py  scientist_v2.py
src/atom/platform/: __init__.py  contracts.py  inverse_design.py  safety.py  webapp.py
src/atom/platform/web/static/: app.js  style.css
src/atom/platform/web/templates/: index.html
src/atom/sim/: atom_worlds.py  supersonic_wedge_solver.py  training_loop.py
tests/: check_drift_double.py  conftest.py  eye2test.py  nvidia_grade_check.py  test_distributions.py  test_ground_truth_dryrun.py  test_phase1_integration.py  test_phase2_scientist.py  test_phase3_system.py  test_ppo_dist.py  verify_launch.py
tests/integration/: test_cli_config_flow.py  test_training_loop.py
tests/unit/: test_brain.py  test_build_release_packet.py  test_cli_entrypoints.py  test_config.py  test_experiment_runner_inverse.py  test_eyes.py  test_governance.py  test_inverse_design.py  test_memory.py  test_packaging_profiles.py  test_platform_ablation_harness.py  test_platform_ablation_plots.py  test_platform_contracts.py  test_platform_webapp.py  test_release_evidence.py  test_runtime_safety.py  test_scientific_integrity_bench.py  test_scientist.py  test_scientist_v2_contracts.py  test_supersonic_challenge.py  test_supersonic_validation_pack.py  test_supersonic_world.py
