[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom-gpsi"
version = "1.0.0"
description = "ATOM Research SDK (Open Source): Neuro-Symbolic Scientific Intelligence for PDE Environments"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Aditya Tiwari, Culturiq Labs", email = "aditya@culturiq.ai"},
]
maintainers = [
    {name = "Culturiq Research Labs", email = "business@culturiq.ai"},
]
keywords = ["neural-symbolic", "ai", "agi", "physics", "neural-networks", "symbolic-regression", "reinforcement-learning", "Fourier-Neural-Operators", "physics-informed-neural-networks"]
classifiers = [
    "Development Status :: Research Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core ML/AI
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # Neural Circuit Policies (Liquid Networks)
    "ncps>=0.1.0",

    # Symbolic Regression
    "pysr>=0.16.0",
    "sympy>=1.12",

    # Physics Simulation
    "xlb>=0.1.0",
    "trimesh>=4.0.0",

    # Configuration & Logging
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",

    # Utilities
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",

    # Optional GPU acceleration
    "cupy>=12.0.0; sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
]
gpu = [
    "torch[cu118]>=2.0.0; sys_platform != 'darwin'",
    "jax[cuda12]>=0.4.0; sys_platform != 'darwin'",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
    "mlflow>=2.8.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/culturiqai/atom-oss-sdk-rp1"
Documentation = "https://atom-gpsi.readthedocs.io/"
Repository = "https://github.com/culturiqai/atom-oss-sdk-rp1"
Issues = "https://github.com/culturiqai/atom-oss-sdk-rp1/issues"
Changelog = "https://github.com/culturiqai/atom-oss-sdk-rp1/blob/main/CHANGELOG.md"

[project.scripts]
atom-train = "atom.cli:main_train_entry"
atom-teacher = "atom.cli:main_teacher_entry"
atom-dream = "atom.cli:main_dream_entry"
atom-eval = "atom.cli:main_eval_entry"
atom-platform-api = "atom.platform.webapp:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["atom*"]

[tool.setuptools.package-data]
atom = [
    "config/*.yaml",
    "config/*.yml",
    "models/*.json",
    "platform/web/templates/*.html",
    "platform/web/static/*.css",
    "platform/web/static/*.js",
]

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py39']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

# isort import sorting
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["atom"]
known_third_party = ["torch", "jax", "numpy", "pysr"]

# MyPy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ncps.*",
    "pysr.*",
    "xlb.*",
    "trimesh.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --strict-markers --strict-config --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \\'not slow\\'')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/atom"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "src/atom/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Pre-commit hooks
[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-added-large-files"},
        {id = "check-merge-conflict"},
        {id = "debug-statements"},
        {id = "check-ast"},
    ]},
    {repo = "https://github.com/psf/black", rev = "23.7.0", hooks = [
        {id = "black"},
    ]},
    {repo = "https://github.com/pycqa/isort", rev = "5.12.0", hooks = [
        {id = "isort"},
    ]},
    {repo = "https://github.com/pycqa/flake8", rev = "6.0.0", hooks = [
        {id = "flake8"},
    ]},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.5.1", hooks = [
        {id = "mypy"},
    ]},
]
